fixed the wrapping & whitespace issues

--- a/ciphR/www/bootstrap.css
+++ b/ciphR/www/bootstrap.css
@@ -50,6 +50,10 @@
           box-sizing: border-box;
 }
 
+.data{
+  white-space: pre-wrap;
+}
+
 
 html {
   font-family: sans-serif;
